--- a/WS.API/appsettings.json
+++ b/WS.API/appsettings.json
@@ -1,16 +1,25 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Console": {
+      "LogLevel": {
+        "Microsoft.Hosting.Lifetime": "Trace"
+      }
     }
   },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information"
+  //  }
+  //},
+
+
   "AllowedHosts": "*",
   "MongoDbSettings": {
     "Host": "localhost",
     "Port": "27017",
-    "User": "qhamvi"
+    "User": "mongoadmin"
   }
 
 }
