--- a/WS.API.Service/WS.API.Service.csproj
+++ b/WS.API.Service/WS.API.Service.csproj
@@ -1,15 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
     <PackageReference Include="MongoDB.Driver" Version="2.17.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WS.API.DTO\WS.API.DTOs.csproj" />
+    <ProjectReference Include="..\WS.API.DTO\WS.API.DTO.csproj" />
     <ProjectReference Include="..\WS.API.Models\WS.API.Models.csproj" />
   </ItemGroup>
 
